workshop03/bgg-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-deploy
  namespace: bggns
  labels:
    app: bggapp
    name: bggapp-deploy

spec:
  replicas: 3
  selector:
    matchLabels:
      app: bggapp
      name: bggapp-po
      version: v1
  template:
    metadata:
      name: bggapp-po
      labels:
        app: bggapp
        name: bggapp-po
        version: v1
    spec:
      containers:
        - name: bggapp-container
          image: chukmunnlee/bgg-app:nov-2025
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - "ls /opt/ready.txt"
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 5
            httpGet:
              path: /healthz
              port: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: bggapp-svc
  namespace: bggns
  labels:
    app: bggapp
    name: bggapp-svc
spec:
  type: ClusterIP
  selector:
    app: bggapp
    name: bggapp-po
    version: v1
  ports:
    - port: 5000
      targetPort: 5000
