workshop03/bgg-database.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bggns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggdb-deploy
  namespace: bggns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bggdb
      name: bggdb-po
  template:
    metadata:
      labels:
        app: bggdb
        name: bggdb-po
    spec:
      volumes:
        - name: bggdb-vol
          persistentVolumeClaim:
            claimName: bggdb-pvc
      containers:
        - name: bggdb-container
          image: chukmunnlee/bgg-database:nov-2025
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: bggdb-vol
              mountPath: /var/lib/mysql

---
apiVersion: v1
kind: Service
metadata:
  name: bggdb-svc
  namespace: bggns
  labels:
    app: bggdb
    name: bggdb-svc
spec:
  type: ClusterIP
  selector:
    app: bggdb
    name: bggdb-po
  ports:
    - port: 3306
      targetPort: 3306
